--- a/templates/genapp-gendex/js.html
+++ b/templates/genapp-gendex/js.html
@@ -1,1 +1,28 @@
+<script src="{{ STATIC_URL }}bower_components/tv4/tv4.js"></script>
+
+<script src="{{ STATIC_URL }}bower_components/jquery.cookie/jquery.cookie.js"></script>
+
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.core.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.widget.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.mouse.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.sortable.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.draggable.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.resizable.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.effect.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.effect-transfer.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery-caret/jquery.caret.js"></script>
+
+<script src="{{ STATIC_URL }}genapp-genexpress/bower_components/flot/jquery.flot.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/bower_components/flot/jquery.flot.navigate.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/bower_components/flot/jquery.flot.image.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/bower_components/jquery.flot.axislabels/jquery.flot.axislabels.js"></script>
+
+<script src="{{ STATIC_URL }}bower_components/angular/angular.js"></script>
+<script src="{{ STATIC_URL }}bower_components/angular-route/angular-route.js"></script>
+<script src="{{ STATIC_URL }}bower_components/angular-resource/angular-resource.js"></script>
+<script src="{{ STATIC_URL }}bower_components/angular-grid/ng-grid-2.0.8.debug.js"></script>
+<script src="{{ STATIC_URL }}bower_components/angular-ui-date/src/date.js"></script>
+<script src="{{ STATIC_URL }}bower_components/angular-sanitize/angular-sanitize.js"></script>
+
 <script src="{{ STATIC_URL }}genapp-gendex/app/app.js"></script>
+<script src="{{ STATIC_URL }}genapp-gendex/app/controller.js"></script>
