--- a/templates/genapp-gendex/js.html
+++ b/templates/genapp-gendex/js.html
@@ -25,4 +25,6 @@
 <script src="{{ STATIC_URL }}bower_components/angular-sanitize/angular-sanitize.js"></script>
 
 <script src="{{ STATIC_URL }}genapp-gendex/app/app.js"></script>
+<script src="{{ STATIC_URL }}genapp-gendex/app/directives.js"></script>
+<script src="{{ STATIC_URL }}genapp-gendex/app/directive.dextable.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/controller.js"></script>
