Added geneplot and sampleplot.

--- a/templates/genapp-gendex/js.html
+++ b/templates/genapp-gendex/js.html
@@ -27,4 +27,6 @@
 <script src="{{ STATIC_URL }}genapp-gendex/app/app.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directives.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directive.dextable.js"></script>
+<script src="{{ STATIC_URL }}genapp-gendex/app/directive.sampleplot.js"></script>
+<script src="{{ STATIC_URL }}genapp-gendex/app/directive.geneplot.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/controller.js"></script>
