--- a/static/genapp-gendex/partials/directives/dextable.html
+++ b/static/genapp-gendex/partials/directives/dextable.html
@@ -1,3 +1,3 @@
 <div>
-    <div class="scrollable-table" ng-grid="gridOptions"></div>
+    <div class="scrollable-table dextable" ng-grid="gridOptions"></div>
 </div>
