--- a/static/genapp-gendex/partials/gendex.html
+++ b/static/genapp-gendex/partials/gendex.html
@@ -1,15 +1,23 @@
 <div class="container">
 
-    <div>
-        <h1>GenDex</h1>
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>GenDex</h1>
+        </div>
     </div>
 
-    <div>
-        <div dextable></div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div dextable></div>
+        </div>
     </div>
 
-    <div>
-        <div sampleplot></div>
+    <div class="row">
+        <p>TEST</p>
+        <div sampleplot class="col-xs-12 col-md-6 plotwidget" style="border: 1px solid red"></div>
+        <div geneplot class="col-xs-12 col-md-6 plotwidget" style="border: 1px solid red"></div>
+    </div>
+
     </div>
 
 </div>
