Added Flot to Genplot and Sampleplot.

--- a/static/genapp-gendex/partials/directives/geneplot.html
+++ b/static/genapp-gendex/partials/directives/geneplot.html
@@ -1,3 +1,8 @@
 <div>
-    <div class="flotChart"></div>
+    <ul class="dropdown-menu" role="menu">
+        <li>Graph 1</li>
+        <li>Graph 2</li>
+    </ul>
+
+    <div class="flotChart plotcanvas"></div>
 </div>
