--- a/static/genapp-gendex/partials/gendex.html
+++ b/static/genapp-gendex/partials/gendex.html
@@ -13,9 +13,8 @@
     </div>
 
     <div class="row">
-        <p>TEST</p>
-        <div sampleplot class="col-xs-12 col-md-6 plotwidget" style="border: 1px solid red"></div>
-        <div geneplot class="col-xs-12 col-md-6 plotwidget" style="border: 1px solid red"></div>
+        <div sampleplot class="col-xs-12 col-md-6"></div>
+        <div geneplot class="col-xs-12 col-md-6"></div>
     </div>
 
     </div>
