Working on genplot, shared variable and added new test data.

--- a/templates/genapp-gendex/js.html
+++ b/templates/genapp-gendex/js.html
@@ -24,9 +24,13 @@
 <script src="{{ STATIC_URL }}bower_components/angular-ui-date/src/date.js"></script>
 <script src="{{ STATIC_URL }}bower_components/angular-sanitize/angular-sanitize.js"></script>
 
+<script src="{{ STATIC_URL }}bower_components/underscore/underscore.js"></script>
+
+<script src="{{ STATIC_URL }}bower_components/angular-ui-bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
+
 <script src="{{ STATIC_URL }}genapp-gendex/app/app.js"></script>
+<script src="{{ STATIC_URL }}genapp-gendex/app/controller.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directives.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directive.dextable.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directive.sampleplot.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directive.geneplot.js"></script>
-<script src="{{ STATIC_URL }}genapp-gendex/app/controller.js"></script>
