--- a/static/genapp-gendex/partials/directives/dextable.html
+++ b/static/genapp-gendex/partials/directives/dextable.html
@@ -1,3 +1,8 @@
 <div>
+    <div class="input-group">
+        <span class="input-group-addon">Search:</span>
+        <input type="text" class="form-control" ng-model="filterOptions.filterText">
+    </div>
+
     <div class="scrollable-table dextable" ng-grid="gridOptions"></div>
 </div>
