--- a/static/genapp-gendex/partials/gendex.html
+++ b/static/genapp-gendex/partials/gendex.html
@@ -8,13 +8,13 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <div dextable></div>
+            <div dextable shared="shared"></div>
         </div>
     </div>
 
     <div class="row">
-        <div sampleplot class="col-xs-12 col-md-6"></div>
-        <div geneplot class="col-xs-12 col-md-6"></div>
+        <div sampleplot class="col-xs-12 col-md-6" shared="shared"></div>
+        <div geneplot class="col-xs-12 col-md-6" shared="shared"></div>
     </div>
 
     </div>
