--- a/static/genapp-gendex/partials/directives/sampleplot.html
+++ b/static/genapp-gendex/partials/directives/sampleplot.html
@@ -1,3 +1,11 @@
 <div>
+    <div class="btn-group-wrap">
+        <div class="btn-group">
+            <button type="button" class="btn btn-default" ng-click="selectedNorm = 1; replot();">Manhattan</button>
+            <button type="button" class="btn btn-default" ng-click="selectedNorm = 2; replot();">Euclidean</button>
+            <button type="button" class="btn btn-default" ng-click="selectedNorm = 3; replot();">Maximum</button>
+        </div>
+    </div>
+
     <div class="flotChart plotcanvas"></div>
 </div>
