--- a/templates/genapp-gendex/js.html
+++ b/templates/genapp-gendex/js.html
@@ -25,6 +25,7 @@
 <script src="{{ STATIC_URL }}bower_components/angular-sanitize/angular-sanitize.js"></script>
 
 <script src="{{ STATIC_URL }}bower_components/underscore/underscore.js"></script>
+<script src="{{ STATIC_URL }}genapp-gendex/js/numeric-1.2.6.min.js"></script>
 
 <script src="{{ STATIC_URL }}bower_components/angular-ui-bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
 
