--- a/static/genapp-gendex/less/base.less
+++ b/static/genapp-gendex/less/base.less
@@ -10,3 +10,17 @@
 .btn-group-wrap {
     text-align: center;
 }
+
+.col6, .col0 {
+    border-right: 3px solid black;
+}
+
+.ngViewport {
+    border: 3px solid black;
+}
+
+.ngHeaderContainer {
+        border-left: 3px solid black;
+        border-right: 3px solid black;
+        border-top: 3px solid black;
+}
