Finished rectangular selection.

--- a/templates/genapp-gendex/js.html
+++ b/templates/genapp-gendex/js.html
@@ -13,6 +13,7 @@
 <script src="{{ STATIC_URL }}bower_components/jquery-caret/jquery.caret.js"></script>
 
 <script src="{{ STATIC_URL }}genapp-gendex/bower_components/flot/jquery.flot.js"></script>
+<script src="{{ STATIC_URL }}genapp-gendex/js/jquery.flot.selection.js"></script>
 
 <script src="{{ STATIC_URL }}bower_components/angular/angular.js"></script>
 <script src="{{ STATIC_URL }}bower_components/angular-route/angular-route.js"></script>
