Added Export button.

--- a/static/genapp-gendex/less/base.less
+++ b/static/genapp-gendex/less/base.less
@@ -1,10 +1,13 @@
+.vertical-space {
+    margin-top: 20px;
+}
+
 .plotcanvas {
     margin-top: 10px;
 }
 
 .dextable {
     height: 300px;
-    margin-bottom: 30px;
 }
 
 .btn-group-wrap {
