--- a/static/genapp-gendex/partials/gendex.html
+++ b/static/genapp-gendex/partials/gendex.html
@@ -6,17 +6,20 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row vertical-space">
         <div class="col-xs-12">
             <div dextable shared="shared"></div>
         </div>
     </div>
 
-    <div class="row">
+    <div class="row vertical-space">
         <div sampleplot class="col-xs-12 col-md-6" shared="shared"></div>
+        <div class="visible-xs visible-sm vertical-space"></div>
         <div geneplot class="col-xs-12 col-md-6" shared="shared"></div>
     </div>
 
+    <div class="row vertical-space">
+        <button type="button" class="btn btn-primary pull-right">Export to PDF</button>
     </div>
 
 </div>
