Added tooltips to geneplot.

--- a/static/genapp-gendex/less/base.less
+++ b/static/genapp-gendex/less/base.less
@@ -27,3 +27,12 @@
         border-right: 3px solid black;
         border-top: 3px solid black;
 }
+
+.tooltip {
+    position: absolute;
+    display: none;
+    border: 1px solid #000;
+    padding: 2px;
+    background-color: #ccc;
+    opacity: 0.80;
+}
