--- a/static/genapp-gendex/partials/gendex.html
+++ b/static/genapp-gendex/partials/gendex.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="row vertical-space">
-        <button type="button" class="btn btn-primary pull-right">Export to PDF</button>
+        <button type="button" class="btn btn-primary pull-right" ng-click="console.log('Not yet implemented');">Export to PDF</button>
     </div>
 
 </div>
