--- a/templates/genapp-gendex/js.html
+++ b/templates/genapp-gendex/js.html
@@ -2,14 +2,14 @@
 
 <script src="{{ STATIC_URL }}bower_components/jquery.cookie/jquery.cookie.js"></script>
 
-<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.core.js"></script>
-<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.widget.js"></script>
-<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.mouse.js"></script>
-<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.sortable.js"></script>
-<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.draggable.js"></script>
-<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.resizable.js"></script>
-<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.effect.js"></script>
-<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/jquery.ui.effect-transfer.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/core.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/widget.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/mouse.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/sortable.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/draggable.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/resizable.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/effect.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery.ui/ui/effect-transfer.js"></script>
 <script src="{{ STATIC_URL }}bower_components/jquery-caret/jquery.caret.js"></script>
 
 <script src="{{ STATIC_URL }}genapp-gendex/bower_components/flot/jquery.flot.js"></script>
@@ -18,14 +18,13 @@
 <script src="{{ STATIC_URL }}bower_components/angular/angular.js"></script>
 <script src="{{ STATIC_URL }}bower_components/angular-route/angular-route.js"></script>
 <script src="{{ STATIC_URL }}bower_components/angular-resource/angular-resource.js"></script>
-<script src="{{ STATIC_URL }}bower_components/angular-grid/ng-grid-2.0.10.debug.js"></script>
+<script src="{{ STATIC_URL }}bower_components/angular-grid/ng-grid-2.0.11.debug.js"></script>
 <script src="{{ STATIC_URL }}bower_components/angular-ui-date/src/date.js"></script>
 <script src="{{ STATIC_URL }}bower_components/angular-sanitize/angular-sanitize.js"></script>
 
-<script src="{{ STATIC_URL }}bower_components/underscore/underscore.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/js/numeric-1.2.6.min.js"></script>
 
-<script src="{{ STATIC_URL }}bower_components/angular-ui-bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
+<script src="{{ STATIC_URL }}bower_components/angular-ui-bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>
 
 <script src="{{ STATIC_URL }}genapp-gendex/app/app.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/controller.js"></script>
