Table imports test data.

--- a/static/genapp-gendex/partials/directives/dextable.html
+++ b/static/genapp-gendex/partials/directives/dextable.html
@@ -8,5 +8,5 @@
         </div>
     </div>
 
-    <div class="scrollable-table dextable" ng-grid="gridOptions"></div>
+    <div class="scrollable-table dextable" ng-if="gridVisible" ng-grid="gridOptions"></div>
 </div>
