--- a/templates/genapp-gendex/js.html
+++ b/templates/genapp-gendex/js.html
@@ -28,7 +28,11 @@
 
 <script src="{{ STATIC_URL }}genapp-gendex/app/app.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/controller.js"></script>
+
+<script src="{{ STATIC_URL }}genapp-gendex/app/services.js"></script>
+<script src="{{ STATIC_URL }}genapp-gendex/app/filters.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directives.js"></script>
+
 <script src="{{ STATIC_URL }}genapp-gendex/app/directive.dextable.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directive.sampleplot.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directive.geneplot.js"></script>
