Fully integrated filterByFieldText, employed Data service for JSON and tab file retrieval now.

--- a/templates/genapp-gendex/js.html
+++ b/templates/genapp-gendex/js.html
@@ -28,10 +28,10 @@
 
 <script src="{{ STATIC_URL }}genapp-gendex/app/app.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/controller.js"></script>
-
-<script src="{{ STATIC_URL }}genapp-gendex/app/services.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directives.js"></script>
-
 <script src="{{ STATIC_URL }}genapp-gendex/app/directive.dextable.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directive.sampleplot.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directive.geneplot.js"></script>
+
+<script src="{{ STATIC_URL }}genjs/filters.js"></script>
+<script src="{{ STATIC_URL }}genjs/services.js"></script>
