--- a/static/genapp-gendex/partials/directives/dextable.html
+++ b/static/genapp-gendex/partials/directives/dextable.html
@@ -1,7 +1,7 @@
 <div>
     <div class="input-group">
         <span class="input-group-addon">Search:</span>
-        <input type="text" class="form-control" ng-model="filterOptions.filterText">
+        <input type="text" class="form-control" ng-model="gridOptions.filterOptions.filterText">
         <div class="input-group-btn">
             <button type="button" class="btn btn-default">Import</button>
             <button type="button" class="btn btn-default">Export</button>
