--- a/static/genapp-gendex/partials/gendex.html
+++ b/static/genapp-gendex/partials/gendex.html
@@ -5,7 +5,7 @@
     <div class="vertical-space" dextable shared="shared"></div>
 
     <div class="row vertical-space">
-        <div sampleplot class="col-xs-12 col-md-6" shared="shared"></div>
+        <!--<div sampleplot class="col-xs-12 col-md-6" shared="shared"></div>-->
         <div class="col-xs-12 visible-xs visible-sm vertical-space"></div>
         <div geneplot class="col-xs-12 col-md-6" shared="shared"></div>
     </div>
