--- a/templates/genapp-gendex/js.html
+++ b/templates/genapp-gendex/js.html
@@ -22,7 +22,7 @@
 <script src="{{ STATIC_URL }}bower_components/angular-ui-date/src/date.js"></script>
 <script src="{{ STATIC_URL }}bower_components/angular-sanitize/angular-sanitize.js"></script>
 
-<script src="{{ STATIC_URL }}genapp-gendex/bower_components/numericjs/lib/numeric-1.2.6.js"></script>
+<script src="{{ STATIC_URL }}genapp-gendex/bower_components/numericjs/src/numeric.js"></script>
 
 <script src="{{ STATIC_URL }}bower_components/angular-ui-bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>
 
