--- a/static/genapp-gendex/partials/gendex.html
+++ b/static/genapp-gendex/partials/gendex.html
@@ -6,7 +6,8 @@
 
     <div class="row vertical-space">
         <!--<div sampleplot class="col-xs-12 col-md-6" shared="shared"></div>-->
-        <div class="col-xs-12 visible-xs visible-sm vertical-space"></div>
+        <!-- <div class="col-xs-12 visible-xs visible-sm vertical-space"></div> -->
+        <div volcanoplot class="col-xs-12 col-md-6" shared="shared"></div>
         <div geneplot class="col-xs-12 col-md-6" shared="shared"></div>
     </div>
 
