--- a/templates/genapp-gendex/js.html
+++ b/templates/genapp-gendex/js.html
@@ -15,6 +15,13 @@
 <script src="{{ STATIC_URL }}genapp-gendex/bower_components/flot/jquery.flot.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/bower_components/flot/jquery.flot.selection.js"></script>
 
+<!-- <script src="{{ STATIC_URL }}genapp-genexpress/bower_components/flot/jquery.flot.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/bower_components/flot/jquery.flot.navigate.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/bower_components/flot/jquery.flot.image.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/bower_components/jquery.flot.axislabels/jquery.flot.axislabels.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/bower_components/jszip/dist/jszip.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/bower_components/jquery-ui-touch-punch-valid/jquery.ui.touch-punch.js"></script> -->
+
 <script src="{{ STATIC_URL }}bower_components/angular/angular.js"></script>
 <script src="{{ STATIC_URL }}bower_components/angular-route/angular-route.js"></script>
 <script src="{{ STATIC_URL }}bower_components/angular-resource/angular-resource.js"></script>
@@ -35,3 +42,7 @@
 
 <script src="{{ STATIC_URL }}genjs/filters.js"></script>
 <script src="{{ STATIC_URL }}genjs/services.js"></script>
+
+<script src="{{ STATIC_URL }}genapp-genexpress/app/services.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/app/directives.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/app/directive.volcanoplot.js"></script>
