Volcanoplot module added, rough import of window, windowpane directives, MDS module added.

--- a/static/genapp-gendex/partials/gendex.html
+++ b/static/genapp-gendex/partials/gendex.html
@@ -4,22 +4,21 @@
 
     <div class="vertical-space" dextable shared="shared"></div>
 
-    <!-- <div windowspane>
-        <br>
-        <div class="windows">
-            <window wtitle="Differential Expression Analysis">
-                <div volcanoplot shared="shared"></div>
-            </window>
-            <window wtitle="Geneplot">
-                <div geneplot shared="shared"></div>
-            </window>
+    <div class="row">
+        <div class="col-xs-6 windowWidthRef"></div>
+    </div>
+    <div class="container genexpress">
+        <div windowspane>
+            <br>
+            <div class="windows">
+                <window wtitle="Differential Expression Analysis">
+                    <div volcanoplot shared="shared"></div>
+                </window>
+                <window wtitle="MDS (Samples)">
+                    <div sampleplot shared="shared"></div>
+                </window>
+            </div>
         </div>
-    </div> -->
-    <div class="row horizontal-space">
-        <!-- <div sampleplot class="col-xs-12 col-md-6" shared="shared"></div>
-        <div class="col-xs-12 visible-xs visible-sm vertical-space"></div> -->
-        <div volcanoplot class="col-xs-12 col-md-3" shared="shared"></div>
-        <!-- <div geneplot class="col-xs-12 col-md-6" shared="shared"></div> -->
     </div>
 
     <div class="vertical-space">
