--- a/static/genapp-gendex/partials/directives/sampleplot.html
+++ b/static/genapp-gendex/partials/directives/sampleplot.html
@@ -1,15 +1,17 @@
-<div>
-    <div class="btn-group-wrap">
-        <div class="btn-group">
-            <button type="button" class="btn btn-default"
-                ng-repeat="n in norms.all"
-                ng-click="norms.selected = n; replot();"
-                ng-class="{active: norms.selected == n}">
-                {{ n.name }}
-            </button>
+<!-- <div class="samplePlot windowPadding hasHead" ng-class="{invisible: !showControls}"> -->
+<div class="samplePlot windowPadding hasHead">
+    <div class="widgetControls">
+        <div class="btn-group-wrap">
+            <div class="btn-group">
+                <button type="button" class="btn btn-default"
+                    ng-repeat="n in norms.all"
+                    ng-click="norms.selected = n; replot();"
+                    ng-class="{active: norms.selected == n}">
+                    {{ n.name }}
+                </button>
+            </div>
         </div>
     </div>
-
     <div class="flotChart plotcanvas"></div>
 
     <div class="tooltip"></div>
