--- a/templates/genapp-gendex/js.html
+++ b/templates/genapp-gendex/js.html
@@ -15,12 +15,11 @@
 <script src="{{ STATIC_URL }}genapp-gendex/bower_components/flot/jquery.flot.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/bower_components/flot/jquery.flot.selection.js"></script>
 
-<!-- <script src="{{ STATIC_URL }}genapp-genexpress/bower_components/flot/jquery.flot.js"></script>
 <script src="{{ STATIC_URL }}genapp-genexpress/bower_components/flot/jquery.flot.navigate.js"></script>
 <script src="{{ STATIC_URL }}genapp-genexpress/bower_components/flot/jquery.flot.image.js"></script>
 <script src="{{ STATIC_URL }}genapp-genexpress/bower_components/jquery.flot.axislabels/jquery.flot.axislabels.js"></script>
 <script src="{{ STATIC_URL }}genapp-genexpress/bower_components/jszip/dist/jszip.js"></script>
-<script src="{{ STATIC_URL }}genapp-genexpress/bower_components/jquery-ui-touch-punch-valid/jquery.ui.touch-punch.js"></script> -->
+<script src="{{ STATIC_URL }}genapp-genexpress/bower_components/jquery-ui-touch-punch-valid/jquery.ui.touch-punch.js"></script>
 
 <script src="{{ STATIC_URL }}bower_components/angular/angular.js"></script>
 <script src="{{ STATIC_URL }}bower_components/angular-route/angular-route.js"></script>
@@ -29,9 +28,40 @@
 <script src="{{ STATIC_URL }}bower_components/angular-ui-date/src/date.js"></script>
 <script src="{{ STATIC_URL }}bower_components/angular-sanitize/angular-sanitize.js"></script>
 
-<script src="{{ STATIC_URL }}genapp-gendex/bower_components/numericjs/src/numeric.js"></script>
+<script src="{{ STATIC_URL }}genapp-gendex/bower_components/numericjs/lib/numeric.js"></script>
+<script src="{{ STATIC_URL }}genapp-gendex/bower_components/numericjs/lib/svd.js"></script>
 
 <script src="{{ STATIC_URL }}bower_components/angular-ui-bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>
+
+<!-- added block -->
+<!-- <script src="{{ STATIC_URL }}bower_components/jquery-file-upload/js/jquery.fileupload.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery-file-upload/js/jquery.fileupload-angular.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery-file-upload/js/jquery.fileupload-process.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery-file-upload/js/jquery.fileupload-validate.js"></script>
+<script src="{{ STATIC_URL }}bower_components/jquery-file-upload/js/jquery.iframe-transport.js"></script> -->
+<!-- //added block -->
+
+<!-- added block -->
+<!-- <script src="{{ STATIC_URL }}genjs/tags.js"></script>
+<script src="{{ STATIC_URL }}genjs/editabletags.js"></script>
+<script src="{{ STATIC_URL }}genjs/sharetable.js"></script>
+<script src="{{ STATIC_URL }}genjs/table.js"></script> -->
+<!-- //added block -->
+
+<script src="{{ STATIC_URL }}genjs/filters.js"></script>
+<script src="{{ STATIC_URL }}genjs/services.js"></script>
+
+<!-- //added block -->
+<script src="{{ STATIC_URL }}genapp-genexpress/misc.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/app/services.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/app/directives.js"></script>
+<!-- <script src="{{ STATIC_URL }}genapp-genexpress/app/directive.geneselector.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/app/directive.profilegraph.js"></script> -->
+<script src="{{ STATIC_URL }}genapp-genexpress/app/directive.volcanoplot.js"></script>
+<script src="{{ STATIC_URL }}genapp-genexpress/app/directive.widgetdock.js"></script>
+<!-- <script src="{{ STATIC_URL }}genapp-genexpress/app/filters.js"></script> -->
+<!-- <script src="{{ STATIC_URL }}genapp-genexpress/app/controllers.js"></script> -->
+<!-- added block -->
 
 <script src="{{ STATIC_URL }}genapp-gendex/app/app.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/controllers.js"></script>
@@ -39,10 +69,3 @@
 <script src="{{ STATIC_URL }}genapp-gendex/app/directive.dextable.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directive.sampleplot.js"></script>
 <script src="{{ STATIC_URL }}genapp-gendex/app/directive.geneplot.js"></script>
-
-<script src="{{ STATIC_URL }}genjs/filters.js"></script>
-<script src="{{ STATIC_URL }}genjs/services.js"></script>
-
-<script src="{{ STATIC_URL }}genapp-genexpress/app/services.js"></script>
-<script src="{{ STATIC_URL }}genapp-genexpress/app/directives.js"></script>
-<script src="{{ STATIC_URL }}genapp-genexpress/app/directive.volcanoplot.js"></script>
