--- a/static/genapp-gendex/less/base.less
+++ b/static/genapp-gendex/less/base.less
@@ -31,8 +31,8 @@
 .tooltip {
     position: absolute;
     display: none;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     padding: 2px;
-    background-color: #ccc;
+    /* background-color: #ccc; */
     opacity: 0.80;
 }
