Fixed markup, injected additional services, work in progress on getting cachedThrottle to work.

--- a/static/genapp-gendex/partials/directives/sampleplot.html
+++ b/static/genapp-gendex/partials/directives/sampleplot.html
@@ -12,5 +12,5 @@
             </div>
         </div>
     </div>
-    <div class="flotChart plotcanvas"></div>
+    <div class="flotChart2 plotcanvas"></div>
 </div>
