--- a/static/genapp-gendex/partials/gendex.html
+++ b/static/genapp-gendex/partials/gendex.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-xs-6 windowWidthRef"></div>
     </div>
-    <div class="container genexpress">
+    <div class="genexpress">
         <div windowspane>
             <br>
             <div class="windows">
