--- a/templates/genapp-gendex/css.html
+++ b/templates/genapp-gendex/css.html
@@ -1,2 +1,2 @@
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}bower_components/angular-grid/ng-grid.css" />
-<link rel="stylesheet" charset="utf-8" type="text/less" href="{{ STATIC_URL }}genapp-gendex/less/base.less">
+<link rel="stylesheet" charset="utf-8" type="text/less" href="{{ STATIC_URL }}genpackage-gendex/less/base.less">
